feat : Add image api & refactor
