# src/api/users/users.model.js
@@ -12,13 +12,14 @@ module.exports = {
 		const params = [email, password, 5];
 		const sql = `INSERT INTO users(email, password, role_id) VALUES(?,?,?)`;
 		const result = await pool.execute(sql, params);
-
+		
 		return result[0];
 	},
 
-	createUser: async ({ email, hashedPassword }) => {
-		const params = [email, hashedPassword];
+	createUser: async ({ email, password }) => {
+		const params = [email, password];
 		const sql = `INSERT INTO users(email, password) VALUES(?,?)`;
+
 		const result = await pool.execute(sql, params);
 		return result[0];
 	},
@@ -38,4 +39,47 @@ module.exports = {
 		const result = await pool.execute(sql, params);
 		return result[0][0];
 	},
+	getTeacher: async({id})=>{
+		const sql = 'SELECT * FROM users AS u,profiles AS p where ?=?';
+		const params = [id,id];
+		const result = await pool.execute(sql,params);
+		
+		return result[0];
+
+	},
+	
+	createTeacher : async({email,hashedPassword,grade,subject,gender,phone_nubmer,school_id})=>{
+		const sql = 'INSERT INTO users (email,password,role_id,class,subject,gender,phone_number,school_id)VALUES(?,?,?,?,?,?,?,?)';
+		const params = [email,hashedPassword,3,grade,subject,gender,phone_nubmer,school_id];
+		const result = await pool.execute(sql,params);
+		return result[0];
+	},
+	
+	createStudent : async({email,hashedPassword,grade,gender,phone_nubmer,school_id})=>{
+		const sql = 'INSERT INTO users (email,password,role_id,class,gender,phone_number,school_id)VALUES(?,?,?,?,?,?,?)';
+		const params = [email,hashedPassword,2,grade,gender,phone_nubmer,school_id];
+		const result = await pool.execute(sql,params);
+		return result[0];
+	},
+
+	createProfile : async({user_id,profile_image_url,user_about})=>{
+		const sql = 'INSERT INTO profiles (user_id,profile_image_url,user_about)VALUES(?,?,?)';
+		const params = [user_id,profile_image_url,user_about];
+		
+		const result = await pool.execute(sql,params);
+		return result[0];
+	},
+
+	getProfiles : async()=>{
+		const sql = 'SELECT * FROM profiles';
+		const result = await pool.execute(sql);
+		return result[0];
+	},
+	
+	getProfile : async({id}) => {
+		const sql = 'SELECT * FROM profiles where id = ?';
+		const params = [id];
+		const result = await pool.execute(sql,params);
+		return result[0];
+	}
 };
