# src/api/users/users.service.js
@@ -30,4 +30,34 @@ module.exports = class UsersService {
 	async getUsers() {
 		return await model.getUsers();
 	}
+
+	async createTeacher({email,password,grade,subject,gender,phone_nubmer,school_id}) {
+		try {
+			const hashedPassword = await bcrpyt.hash(password,10);
+			await model.createTeacher({email,hashedPassword,grade,subject,gender,phone_nubmer,school_id});
+			const teacher = await this.getUserByEmail({email});
+			return teacher;	
+		} catch (error) {
+			console.log(error);
+			throw new Error("Error while creating teacher");
+		}
+	}
+
+	async createStudent({email,password,grade,gender,phone_nubmer,school_id}) {
+		try {
+			const hashedPassword = await bcrpyt.hash(password,10);
+			await model.createStudent({email,hashedPassword,grade,gender,phone_nubmer,school_id});
+			const student = await this.getUserByEmail({email});
+			return student;	
+		} catch (error) {
+			console.log(error);
+			throw new Error("Error while creating student");
+		}
+	}
+
+	async createProfile({user_id,profile_image_url,user_about}){
+		await model.createProfile({user_id,profile_image_url,user_about});
+		return await model.getProfiles();
+		
+	}
 };
